ingress/ing-notls.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    #kubernetes.io/tls-acme: true
  name: maya-nginx-ingress
spec:
  #tls:
  #- hosts:
  #  - mayaonline.io
  #  - www.mayaonline.io
  #  - app.mayaonline.io  
  #  secretName: prod-lego-secret
  rules:
  - host: preprod-app.mayaonline.io
    http:
      paths:
      - path: /
        backend:
          serviceName: maya-service
          servicePort: 8080
      - path: /echo/
        backend:
          serviceName: echoheaders
          servicePort: 80
      - path: /chat-server/
        backend:
          serviceName: mule-bot-service
          servicePort: 8080
  - host: preprod.mayaonline.io
    http: 
      paths:
        - path: /
          backend: 
            serviceName: mktapp-mo-service
            servicePort: 80
        - path: /echo/
          backend: 
            serviceName: echoheaders
            servicePort: 80                  
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    #kubernetes.io/tls-acme: true
    # type of authentication
    ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropiate context why the authentication is required
    ingress.kubernetes.io/auth-realm: "Authentication Required"
    ingress.kubernetes.io/auth-response-headers: username
    ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Scope-OrgID $remote_user;
  name: maya-auth-ingress
spec:
  #tls:
  #- hosts:
  #  - app.mayaonline.io
  #  secretName: prod-lego-secret 
  rules:
  - host: preprod-app.mayaonline.io
    http:
      paths:
      - path: /maya-grafana/
        backend:
          serviceName: maya-grafana-service
          servicePort: 3000
      - path: /maya-cortex-push/
        backend:
          serviceName: distributor
          servicePort: 80
      - path: /maya-cortex-pull/
        backend:
          serviceName: querier
          servicePort: 80
