ingress/ingress-template.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: "true"
  name: maya-nginx-ingress
spec:
  tls:
    - hosts:
        - staging.mayaonline.io
        - staging.app.mayaonline.io
      secretName: mayastaging-lego-secret
  rules:
    - host: staging.app.mayaonline.io
      http:
        paths:
          - path: /
            backend:
              serviceName: maya-service
              servicePort: 8080
          - path: /echo/
            backend:
              serviceName: echoheaders
              servicePort: 80
    - host: staging.mayaonline.io
      http:
        paths:
          - path: /
            backend:
              serviceName: mktapp-mo-service
              servicePort: 8080
          - path: /echo/
            backend:
              serviceName: echoheaders
              servicePort: 80
